# web_display_sqs_message

./: Dockerfile  README.md  pyproject.toml
display_sqs_message/: __main__.py  app.py  print_sqs_message.py
docker/: Dockerfile
